--- a/ncc.css
+++ b/ncc.css
@@ -56,6 +56,7 @@
   } 
 
   .col {
+    /* if this is set to display:flex in flex row mode, then paragraphs will go in line one after the other */
     width: 30vw;
     margin: 20px 8px 20px 8px; 
     background-image: url(http://www.fotonix.it/img/ncc/mi_000099110013_1200_i.jpg);
@@ -65,6 +66,10 @@
     text-align: center;
     
   }
+
+  /* check if this can be done for p (or .col)
+  @media only screen and (min-width: 320px) and (max-width: 768px) { p { width: 70vw; } }
+  */
 
   p {
     text-align: justify;
@@ -158,6 +163,19 @@ In CSS, ::after creates a pseudo-element that is the last child of the selected 
   .arancio {
       color: #FF8000;
   }
+
+  .dsg {
+    color: darkslategrey;
+  }
+
+  .giallo2 {
+    color: #FFCC00;
+  }
+
+  .giallo2:hover {
+  color: #CCFFCC;
+  }
+
   .w20 {
     width: 20vw;
   }
@@ -256,14 +274,42 @@ In CSS, ::after creates a pseudo-element that is the last child of the selected 
 #arrow-right {
   width: 0; 
   height: 0; 
-  border-top: 6vh solid transparent;
-  border-bottom: 6vh solid transparent;
-  border-left: 5vw solid darkslategrey;
+  border-top: 4vh solid transparent;
+  border-bottom: 4vh solid transparent;
+  border-left: 2vw solid darkslategrey;
   border-radius: 6px;
 }
 
 #arrow-right:hover {
-border-left: 5vw solid slategrey;
+border-left: 2vw solid slategrey;
+}
+
+.arrow-down {
+  width: 0; 
+  height: 0; 
+  border-right: 3.3vh solid transparent;
+  border-left: 3.3vh solid transparent; 
+  border-top: 3.2vw solid rgba(255, 204, 0, 0.55); 
+  border-radius: 6px;
+  margin: 0px 12px 0px 12px; 
+}
+
+.arrow-down:hover {
+border-top: 3.2vw solid darkslategrey;
+}
+
+.arrow-up {
+  width: 0; 
+  height: 0; 
+  border-right: 3.3vh solid transparent;
+  border-left: 3.3vh solid transparent; 
+  border-bottom: 3.2vw solid rgba(255, 204, 0, 0.55); 
+  border-radius: 6px;
+  margin: 12px 12px 0px 12px; 
+}
+
+.arrow-up:hover {
+border-bottom: 3.2vw solid darkslategrey;
 }
 
 #cerchio {
